--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>AndrewYi&#39;s Blog</title><meta name="Description" content="There is a peaceful place"><meta property="og:title" content="AndrewYi&#39;s Blog" />
 <meta property="og:description" content="There is a peaceful place" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" /><meta property="og:image" content="http://example.org/logo.png"/><meta property="og:site_name" content="There is a peaceful place" />
+<meta property="og:url" content="https:andrewyi99.github.io/" /><meta property="og:image" content="https:andrewyi99.github.io/"/><meta property="og:site_name" content="There is a peaceful place" />
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="http://example.org/logo.png"/>
+<meta name="twitter:image" content="https:andrewyi99.github.io/"/>
 
 <meta name="twitter:title" content="AndrewYi&#39;s Blog"/>
 <meta name="twitter:description" content="There is a peaceful place"/>
@@ -20,14 +20,14 @@
 
 <meta name="theme-color" content="#f8f8f8"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="AndrewYi&#39;s Blog">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"><link rel="canonical" href="https:andrewyi99.github.io/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="AndrewYi&#39;s Blog">
     <link rel="feed" href="/index.xml" type="application/rss+xml" title="AndrewYi&#39;s Blog"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/color.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/fontawesome-free/all.min.css">
         <noscript><link rel="stylesheet" href="/lib/fontawesome-free/all.min.css"></noscript><link rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" href="/lib/animate/animate.min.css">
         <noscript><link rel="stylesheet" href="/lib/animate/animate.min.css"></noscript><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "http:\/\/example.org\/","inLanguage": "zh-CN","author": {
+        "url": "https:andrewyi99.github.io\/","inLanguage": "zh-CN","author": {
                 "@type": "Person",
                 "name": "xxxx"
             },"description": "There is a peaceful place","name": "AndrewYi's Blog"
